# Thoth

./: .env.example  .gitignore  .gitleaks.toml  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  build.rs  deny.toml  local-ci.ps1  local-ci.sh  thoth-notebooklm.md
.bmad-core/: bmad-project.md
.bmad-core/data/adrs/: adr-002-thoth-architecture.md  adr-003-hotkey-framework.md  adr-004-thoth-security.md
.bmad-core/data/epics/: epics-thoth-initial-development.md  epics-thoth-v2.md  epics-thoth-v3.md
.bmad-core/data/sprints/: sprint-3.md  sprint-4.md  sprint-5.md
.bmad-core/data/stories/: S1-THOTH-01-scaffolding.md  S1-THOTH-02-global-hotkey.md  S1-THOTH-03-clipboard.md  S1-THOTH-04-pylos-client.md  S1-THOTH-05-orchestrator.md  S1-THOTH-06-system-tray.md  S1-THOTH-07-packaging.md  S1-THOTH-08-ci-cd-pipeline.md  S1-THOTH-09-notification.md  S1-THOTH-10-clipboard-restore.md  S1-THOTH-11-config-hot-reload.md  S1-THOTH-12-e2e-tests.md  S2-THOTH-01-auto-start.md  S2-THOTH-02-target-language.md  S2-THOTH-03-model-fallback.md  S2-THOTH-04-msi-installer.md  S2-THOTH-05-binary-signing.md  S3-THOTH-01-custom-hotkey.md  S3-THOTH-02-silent-mode.md  S3-THOTH-03-local-metrics.md  S3-THOTH-04-adr-hotkey-framework.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: agent-development-plan.md  architecture-security-screenshot-mqtt.md  epic-portage-linux-macos.md  feature-screenshot-mqtt.md  notebooklm-presentation.md  notebooklm-thoth.md
installer/: Thoth.wxs
src/: auto_start.rs  clipboard.rs  config.rs  dialog.rs  error.rs  gui.rs  hotkey.rs  lib.rs  main.rs  metrics.rs  mqtt.rs  notification.rs  orchestrator.rs  pylos_client.rs  s3_storage.rs  screenshot.rs  secure_storage.rs  tray.rs  vision.rs
tests/: integration.rs
