[package]
name = "thoth"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
arboard = { version = "3", default-features = false }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
toml = "1.1"
thiserror = "2"
regex = "1"
tracing-appender = "0.2"
time = "=0.3.36"
sys-locale = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }

[package.metadata.cargo-udeps.ignore]
development = []
normal = ["thiserror"]

[dev-dependencies]
wiremock = "0.6"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
rdev = "0.5"
notify-rust = "4"
tray-icon = "0.24"
winreg = "0.56"
windows-sys = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace]
