[package]
name = "thoth"
version = "1.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.88"

[dependencies]
tokio = { version = "1", features = ["full"] }
arboard = { version = "3", default-features = false }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
toml = "1.1"
regex = "1"
tracing-appender = "0.2"
time = "=0.3.49"
sys-locale = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
rfd = "0.17"
directories = "6"
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
xcap = { version = "0.4", features = ["vendored"] }
rumqttc = { version = "0.25", default-features = false, features = ["websocket", "use-rustls"] }
base64 = "0.22"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls", "with-tokio"] }

[package.metadata.cargo-udeps.ignore]
development = []
normal = []

[dev-dependencies]
wiremock = "0.6"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
rdev = "0.5"
notify-rust = "4"
tray-icon = "0.24"
winreg = "0.56"
windows-sys = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security_Cryptography",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
rdev = "0.5"
tray-icon = "0.24"
notify-rust = "4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[workspace]
