[package]
name = "thoth"
version = "2026.6.1"
edition = "2024"
license = "MIT"
rust-version = "1.92"

[dependencies]
tokio = { version = "1", features = ["full"] }
arboard = { version = "3", default-features = false }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
toml = "1.1"
regex = "1"
tracing-appender = "0.2"
time = "=0.3.51"
sys-locale = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
rfd = "0.17"
directories = "6"
libc = "0.2"
keyring = { version = "3" }
xcap = "0.4"
rumqttc = { version = "0.25", default-features = false, features = ["websocket", "use-rustls"] }
base64 = "0.22"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls", "with-tokio"] }

[package.metadata.cargo-udeps.ignore]
development = []
normal = []

[dev-dependencies]
wiremock = "0.6"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-sys = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security_Cryptography",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[target.'cfg(any(windows, target_os = "macos", target_os = "linux"))'.dependencies]
rdev = "0.5"
tray-icon = "0.24"
notify-rust = "4"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", default-features = false, features = ["v3_24"] }

[profile.release]
# Profil rapide pour CI/dev : sccache-compatible, ~2-3 min
opt-level = "z"
lto = "thin"
codegen-units = 4
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Profil production pour les releases (tags v*) : binaire optimal
# fat LTO + CU=1 = link-time optimization maximale, ~8-10 min acceptable
[profile.release-opt]
inherits = "release"
lto = "fat"
codegen-units = 1
# strip et panic = "abort" hérités

[workspace]
